[gd_scene load_steps=5 format=3 uid="uid://dleidoddlsrv"]

[ext_resource type="Script" path="res://scenes/entity/tower/rocket_tower/TowerRocketCommon.gd" id="1_vx5yc"]
[ext_resource type="Texture2D" uid="uid://dtk17e4dt06rf" path="res://resources/textures/towers/towerDefense_tile180.png" id="2_fqreq"]
[ext_resource type="Texture2D" uid="uid://c3d280u4ktmse" path="res://resources/textures/towers/towerDefense_tile206.png" id="3_lq1it"]
[ext_resource type="PackedScene" path="res://scenes/entity/tower/shooting/SingleBulletComponent.tscn" id="4_feoor"]

[node name="RocketTower" type="Node2D"]
script = ExtResource("1_vx5yc")
damage = 75
rotation_speed_deg = 60
active_range = 400
range_area_node = NodePath("Area2D")
turret_node = NodePath("TowerGun")
icon_image_path = "res://resources/textures/towers/towerDefense_tile206.png"
build_cost = 20

[node name="TowerBase" type="Sprite2D" parent="."]
position = Vector2(32, 32)
texture = ExtResource("2_fqreq")

[node name="TowerGun" type="Sprite2D" parent="."]
position = Vector2(32, 32)
texture = ExtResource("3_lq1it")

[node name="Muzzle" type="Marker2D" parent="TowerGun"]
position = Vector2(32, 0)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(32, 32)
collision_mask = 3

[node name="TowerGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -16.0
offset_right = 64.0
offset_bottom = 62.0

[node name="SingleBulletComponent" parent="TowerGUI" instance=ExtResource("4_feoor")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
reloading_time = 3.0

[connection signal="on_reloading_finished" from="TowerGUI/SingleBulletComponent" to="." method="_on_SingleBulletComponent_on_reloading_finished"]
